Build/ingress_rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /express
            pathType: Prefix
            backend:
              service:
                name: express-service
                port:
                  number: 8082
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginix-service
                port:
                  number: 8082
